# TheChallenge

./: CMakeLists.txt  README.md  build.sh
output/: snapshot.json
src/: config.cpp  config.hpp  dbn_reader.cpp  dbn_reader.hpp  dbn_reader_test_main.cpp  main.cpp  net.cpp  net.hpp  order_book.cpp  order_book.hpp
